--- a/estilo.css
+++ b/estilo.css
@@ -166,3 +166,58 @@
     margin-top: 40px;
 }
 
+                /*--------------------------------------------TRANSFORMAÇÕES-------------------------------------------------*/
+
+.translate{
+    height: 200px;
+    width: 1270px;
+    text-align: center;
+    background: orange;
+    transform: translate(50px,100px); /*prmeiro valor do X depois valor do Y*/
+}
+
+.rotate{
+    height: 200px;
+    width: 1270px;
+    text-align: center;
+    background: gray;
+    margin-top: 330px;
+    transform: rotate(15deg); /*indica os valores com o grau*/
+}
+
+.rotate_properties{
+    height: 200px;
+    width: 1270px;
+    text-align: center;
+    background: orange;
+    margin-top: 40px;
+    transform: rotate(15deg);
+    transform-origin: left bottom;
+}
+
+.scale{
+    height: 200px;
+    width: 1270px;
+    text-align: center;
+    background: gray;
+    margin-top: 330px;
+    transform:scale(1.0,0.7);
+}
+
+.skew{
+    height: 200px;
+    width: 1270px;
+    text-align: center;
+    background: orange;
+    margin-top: 190px;
+    transform: skew(20deg, 10deg);
+}
+
+.matrix{
+    height: 200px;
+    width: 1270px;
+    text-align: center;
+    background: gray;
+    margin-top: 300px;
+    transform: matrix(1,-0.3,0,1,0,0); /*scaleX, skewY, skewX, scaleY, translateX e translateY*/
+}
